<resources>
    <string name="app_name">MABS</string>
    <string name="title_activity_items">Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Specify the item, the value and the category&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input, please use the manual addition</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="your_total_expenses">Your total expenses:</string>
    <string name="textview">TextView</string>
    <string name="add_new">Add new</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="items">Items</string>
</resources>


