<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".HomeFragment">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView1"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#343e99"
        android:visibility="invisible"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="#ffffff"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/findMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="105dp"
            android:fontFamily="@font/caviardreams"
            android:lineSpacingExtra="4sp"
            android:text="@string/your_total_expenses"
            android:textAlignment="center"
            android:textColor="@color/fui_bgEmail"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="115dp" />

        <TextView
            android:id="@+id/userHi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/caviardreams"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/userHi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/expenses"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="51dp"
            android:layout_marginBottom="94dp"
            android:fontFamily="@font/caviardreamsbold"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="38sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findMe"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/addNew"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/add"
                android:src="@null"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/caviardreams"
                android:text="@string/add_new"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnSpeak"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/mik2"
                android:src="@null"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/caviardreams"
                android:text="@string/tap_on_mic"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/findMe"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/findmabs"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>